@@ -1,19 +1,10 @@
 {
-  "timestamp" : "2024-02-03T08:17:30Z",
-  "count_outdated" : 1555,
-  "uniques_outdated" : 852,
-  "count" : 1587,
+  "timestamp" : "2024-02-03T16:18:09Z",
+  "count_outdated" : 1557,
+  "uniques_outdated" : 853,
+  "count" : 1588,
   "uniques" : 869,
   "clones" : [
-    {
-      "timestamp": "2024-01-20T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 1, 2 ],
-      "uniques": 1,
-      "uniques_minmax": [ 1, 1 ],
-      "uniques_decinc": [ 0, 1 ]
-    },
     {
       "timestamp": "2024-01-21T00:00:00Z",
       "count": 2,
@@ -133,9 +124,9 @@
     },
     {
       "timestamp": "2024-02-03T00:00:00Z",
-      "count": 1,
-      "count_minmax": [ 1, 1 ],
-      "count_decinc": [ 0, 1 ],
+      "count": 2,
+      "count_minmax": [ 1, 2 ],
+      "count_decinc": [ 0, 2 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
